--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     uses: lvlcn-t/meta/.github/workflows/test.yml@main
     with:
       go_version_file: go.mod
-      golangci_config: .golangci.yml
+      golangci_config: .golangci.yaml
       private_go_server: ""
       before_tests: ""
       additional_args: -v
