--- a/.goreleaser-ci.yaml
+++ b/.goreleaser-ci.yaml
@@ -3,6 +3,7 @@ snapshot:
   name_template: "commit-{{ .ShortCommit }}"
 builds:
   - env: [CGO_ENABLED=0]
+    main: ./cmd/app
     ldflags:
       - -s -w -X main.version={{ .Version }}
       - -extldflags "-static"
