--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,6 +1,7 @@
 project_name: meta
 builds:
   - env: [CGO_ENABLED=0]
+    main: ./cmd/app
     ldflags:
       - -s -w -X main.version={{ .Tag }}
       - -extldflags "-static"
