chore: update pre-commit.ci autoupdate commit message

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ ci:
     fix(deps): [pre-commit.ci] auto fixes\n\nFor more information, see https://pre-commit.ci
   autofix_prs: true
   autoupdate_commit_msg: |
-    fix(deps): [pre-commit.ci] auto update\n\nFor more information, see https://pre-commit.ci
+    chore(deps): [pre-commit.ci] auto update\n\nFor more information, see https://pre-commit.ci
   autoupdate_schedule: weekly
 
 repos:
