chore: add permissions for actions in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: Continuous Integration
 on: [push]
 
 permissions:
+  actions: read
   contents: write
   packages: write
   security-events: write
