--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,3 @@
-default_stages: [pre-push]
 ci:
   autofix_commit_msg: |
     fix(deps): [pre-commit.ci] auto fixes\n\nFor more information, see https://pre-commit.ci
@@ -24,7 +23,7 @@ repos:
     hooks:
       - id: go-mod-tidy-repo
       - id: go-test-repo-mod
-        args: [-race, -count=1]
+        args: [-race, -count=1, -test.short]
       - id: go-vet-repo-mod
       - id: go-fumpt-repo
         args: [-l, -w]
@@ -44,4 +43,3 @@ repos:
     rev: v8.18.2
     hooks:
       - id: gitleaks
-        stages: [pre-commit]
