--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -85,7 +85,7 @@ linters:
     - dogsled
     - dupl
     - errcheck
-    - exportloopref
+    - copyloopvar
     - funlen
     - gocheckcompilerdirectives
     - gochecknoinits
