--- a/.goreleaser-ci.yaml
+++ b/.goreleaser-ci.yaml
@@ -1,6 +1,7 @@
+version: 2
 project_name: meta
 snapshot:
-  name_template: "commit-{{ .ShortCommit }}"
+  version_template: "commit-{{ .ShortCommit }}"
 builds:
   - env: [CGO_ENABLED=0]
     main: ./cmd/app
